tests/4.txt
[1mtests/4.c:5:4: [91merror:[0m[1m use of undeclared identifier 'y'[0m
   y = 4;
   ^
[93mMake sure to declare variable 'y' by specifying its type within scope before line 5, and check that the variable name is spelled correctly.[0m

